scss/main.scss
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');

// Variables
$font-stack: 'Source Sans Pro', sans-serif;
$bg-color: #fffefe;
$hl-color: #2196f3;
$muted-color: mix($bg-color, #000, 50%);
$trans-time: 300ms;
$width: 52rem;
$white: #fff;
$black: #282936;

@mixin transition(
  $property: all,
  $duration: 0.45s,
  $ease: cubic-bezier(0.65, 0, 0.076, 1)
) {
  transition: $property $duration $ease;
}

// Reset
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  line-height: 1.15;
  font-size: 10px;
}

body {
  font-family: $font-stack;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: $bg-color;
}

main {
  width: 720px;
  height: 1280px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column;
}

.input-section {
  // border: 1px solid orange; // Delete
  height: 50%;
  display: flex;
  width: 100%;
  flex-flow: column;
  align-items: center;
  justify-content: space-evenly;
}

.wilson-block {
  height: 50%;

  img {
    height: 100%;
  }
}

.input-wrapper {
  // border: 1px solid red; // Delete
  position: relative;
  height: 12%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column;

  label {
    font-size: 3.5rem;
    position: absolute;
    top: 2.2rem;
    left: 5px;
    transition: 300ms ease all;
    pointer-events: none;
  }

  input {
    font-size: 4.5rem;
    width: 100%;
    height: 15rem;
    border: none;
    border-bottom: 1px solid $muted-color;
    // outline: none;

    &:focus {
      outline: none;
    }

    &:focus ~ label,
    &:valid ~ label {
      top: -2.5rem;
      font-size: 2.5rem;
    }

    &:focus ~ .bar:before {
      width: $width;
    }
  }
}

.bar {
  position: relative;
  display: block;
  width: $width;
  &:before {
    content: '';
    height: 3px;
    width: 0;
    bottom: 0px;
    position: absolute;
    background: $hl-color;
    transition: $trans-time ease all;
    left: 0%;
  }
}

// Button
button {
  position: relative;
  display: inline-block;
  cursor: pointer;
  outline: none;
  border: 0;
  vertical-align: middle;
  text-decoration: none;
  background: transparent;
  padding: 0;
  font-size: inherit;
  font-family: inherit;
  &.learn-more {
    width: 23rem;
    height: auto;
    .circle {
      @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
      display: block;
      margin: 0;
      width: 3rem;
      height: 6rem;
      background: $black;
      border-radius: 1.625rem;
    }
    .button-text {
      @include transition(all, 0.45s, cubic-bezier(0.65, 0, 0.076, 1));
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      padding: 0.75rem 0;
      margin: 0 0 0 1.85rem;
      color: $black;
      font-size: 3rem;
      font-weight: 700;
      line-height: 1.6;
      text-align: center;
      text-transform: uppercase;
    }
  }
  &:hover {
    .circle {
      width: 100%;
      .icon {
        &.arrow {
          background: $white;
          transform: translate(1rem, 0);
        }
      }
    }
    .button-text {
      color: $white;
    }
  }
}

// Info Page
.info {
  font-size: 3rem;
  height: 50%;
  display: flex;
  flex-flow: column;
  justify-content: space-evenly;
  align-items: center;

  ul {
    list-style-type: none;

    li {
      padding: 2rem;
      text-align: center;
    }
  }
}

.icon {
  height: 5rem;
}

.icon-sun {
  background: url('../images/sun.svg') no-repeat center;
  background-size: contain;
}

.icon-moon {
  background: url('../images/full-moon.svg') no-repeat center;
  background-size: contain;
}

